--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-  height: 100%;
+  height: 105%;
   display: flex;
   flex-direction: column;
   border-left: 1px solid #323232;
@@ -22,6 +22,7 @@
   border-bottom: 1px solid #333;
   font-size: clamp(1.125rem, 1.0682rem + 0.2841vw, 1.25rem);
   font-weight: bold;
+  margin-top: 2rem;
   }
 .chat-card-container{padding: 0.6rem;
   margin: 0;
@@ -153,10 +154,10 @@
 /* media querie for mobile */
 @media screen and (max-width: 768px) {
   
-  .sidebar {overflow: unset;max-height: 32dvh;         box-shadow: 0px 5px 12px #000000b5; }
+  .sidebar {overflow: unset;max-height: 25dvh;         box-shadow: 0px 5px 12px #000000b5; }
 .sidebar-inner{        border-bottom: none;
   box-shadow: none;}
-  .sidebar-title { padding: 0.5rem 1rem;}
+  .sidebar-title { padding: 0.5rem 1rem;  margin-top: 1rem;}
   
   .sidebar-inner::after {display: none;}
 
